basic stuff idk

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
   <h1> LCB Toolbox </h1>
-  <p> wow
+  <p> Welcome to the resource site for Limbus Company!
+  <h2> Sinners </h2>
+  <a href="gregor.html"> Gregor </a>
   </body>
 </html>
